[project]
  name = "pulumi_juniper_mist"
  description = "A Pulumi package for creating and managing Juniper Mist resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "juniper", "mist", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-junipermist"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_juniper_mist = ["py.typed", "pulumi-plugin.json"]
